@@ -5,8 +5,12 @@ kbd-chooser (1.15) UNRELEASED; urgency=low
       debian/kbd-chooser.templates-in, so that po2debconf doesn't decide
       that it needs to run debconf-updatepo on every binary package build.
     - Improve copyright file a little, thanks to lintian.
+  * Frans Pop
+    - Fix segfault if localechooser is not present by setting default
+      for debian-installer/language. (Closes: #314721)
+    - While we're at it, improve check for debian-installer/locale.
 
- -- Colin Watson <cjwatson@debian.org>  Wed,  8 Jun 2005 23:18:09 +0100
+ -- Frans Pop <aragorn@tiscali.nl>  Tue, 21 Jun 2005 00:44:37 +0200
 
 kbd-chooser (1.14) unstable; urgency=low
 
